user status: Change away to unavailable.

--- a/static/templates/user_info_popover_content.handlebars
+++ b/static/templates/user_info_popover_content.handlebars
@@ -36,14 +36,14 @@
         {{#if can_set_away}}
         <li>
             <a href="#" class="set_away_status">
-                <i class="fa fa-sign-out" aria-hidden="true"></i> {{#tr this}}Set yourself to away{{/tr}}
+                <i class="fa fa-minus-circle" aria-hidden="true"></i> {{#tr this}}Set yourself as unavailable{{/tr}}
             </a>
         </li>
         {{/if}}
         {{#if can_revoke_away}}
         <li>
             <a href="#" class="revoke_away_status">
-                <i class="fa fa-sign-out" aria-hidden="true"></i> {{#tr this}}Set yourself to active{{/tr}}
+                <i class="fa fa-minus-circle" aria-hidden="true"></i> {{#tr this}}Set yourself as active{{/tr}}
             </a>
         </li>
         {{/if}}
