--- a/static/templates/draft.handlebars
+++ b/static/templates/draft.handlebars
@@ -3,7 +3,7 @@
         {{#if is_stream}}
         <div class="message_header message_header_stream">
             <div class="message-header-contents">
-                <div class="message_label_clickable stream_label"
+                <div class="message_label_clickable stream_label {{dark_background}}"
                   style="background: {{stream_color}}; border-left-color: {{stream_color}};">
                     {{stream}}
                 </div>
