drafts: Remove left border from draft-box.
This removes the left border extending the stream label from the
recipient bar in from the drafts in drafts modal.

--- a/static/styles/drafts.scss
+++ b/static/styles/drafts.scss
@@ -96,9 +96,12 @@
 
 .draft-row .draft-info-box {
     width: 100%;
-    border-bottom: 1px solid hsl(0, 0%, 88%);
-    border-top: 1px solid hsl(0, 0%, 88%);
+    border: 1px solid hsl(0, 0%, 88%);
     margin-bottom: 10px;
+}
+
+.draft-info-box .message_row {
+    border: 0;
 }
 
 .draft-info-box .messagebox {
