drafts: Add blue border around the active draft.
This removes the change in background to a darker one for active draft,
also removes the change in recipient_row_date color to blue; adds a blue
border around the draft box.

--- a/static/styles/drafts.scss
+++ b/static/styles/drafts.scss
@@ -78,15 +78,7 @@
 }
 
 .draft-info-box.active {
-    background-color: hsl(0, 0%, 93%);
-}
-
-.night-mode .draft-info-box.active {
-    background-color: hsl(0, 0%, 13%);
-}
-
-.draft-info-box.active .recipient_row_date {
-    color: hsl(240, 100%, 40%);
+    outline: 2px solid hsl(215, 47%, 50%);
 }
 
 .draft-row > div {
