messagebox: Change alert message background to dark in night mode.
When copying a message by clicking on "copy and close" button in
message edit box an alert appears that says "Copied!"; Background
of the message is set corresponding with the day mode but not the
night mode. This changes the background of the alert message to
the dark color in night mode.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -59,6 +59,17 @@ body.night-mode {
         color: inherit !important;
     }
 
+    /* It's a little annoying that we need to specify the different
+       background colors for these, but this alert feature can't use a
+       transparent background without creating other problems */
+    .alert-msg {
+        background-color: hsl(212, 28%, 18%);
+    }
+
+    .private-message .alert-msg {
+        background-color: hsl(208, 17%, 29%);
+    }
+
     /* do not turn the .message_header .stream_label text dark on hover because they're
 on a dark background, and don't change the dark labels dark either. */
     .message_header:not(.dark_background) a.stream_label:not(.dark_background):hover,
