invites: Add UI for revoking multiuse invites.

--- a/static/templates/admin_tab.handlebars
+++ b/static/templates/admin_tab.handlebars
@@ -1,4 +1,6 @@
 <div class="alert" id="organization-status"></div>
+<div id="revoke_invite_modal_holder"></div>
+
 {{ partial "admin-settings-modals"}}
 
 {{ partial "organization-profile-admin" }}
