--- a/static/templates/admin_invites_list.handlebars
+++ b/static/templates/admin_invites_list.handlebars
@@ -1,9 +1,10 @@
 {{#with invite}}
 <tr class="invite_row">
     <td>
+        {{#if is_multiuse}}
+        <span class="email">{{t 'Multiuse invite'}}</span>
+        {{else}}
         <span class="email">{{email}}</span>
-        {{#if invited_as_admin}}
-        <i title="{{t 'Invited as administrator'}}" class="fa fa-bolt invited-as-admin"></i>
         {{/if}}
     </td>
     <td>
@@ -16,12 +17,14 @@
         <span>{{invited_as_text}}</span>
     </td>
     <td>
-        <button class="button rounded small revoke btn-danger" data-invite-id="{{id}}">
+        <button class="button rounded small revoke btn-danger" data-invite-id="{{id}}" data-is-multiuse="{{is_multiuse}}">
             {{t "Revoke" }}
         </button>
+        {{#unless is_multiuse}}
         <button class="button rounded small resend btn-warning" data-invite-id="{{id}}">
             {{t "Resend" }}
         </button>
+        {{/unless}}
     </td>
 </tr>
 {{/with}}
