invites: Fix the invalid invite time bug during filtering.

--- a/static/templates/admin_invites_list.handlebars
+++ b/static/templates/admin_invites_list.handlebars
@@ -11,7 +11,7 @@
         <span class="referred_by">{{ref}}</span>
     </td>
     <td>
-        <span class="invited_at">{{invited}}</span>
+        <span class="invited_at">{{invited_absolute_time}}</span>
     </td>
     <td>
         <span>{{invited_as_text}}</span>
