--- a/static/templates/admin_invites_list.handlebars
+++ b/static/templates/admin_invites_list.handlebars
@@ -2,7 +2,7 @@
 <tr class="invite_row">
     <td>
         {{#if is_multiuse}}
-        <span class="email">{{t 'Invite link'}}</span>
+        <span class="email"><a href="{{link_url}}" target="_blank">{{t 'Invite link'}}</a></span>
         {{else}}
         <span class="email">{{email}}</span>
         {{/if}}
