--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -242,7 +242,7 @@ a.conversation-partners:hover {
     line-height: 1.1;
 }
 
-.left-sidebar li a.topic-name:hover {
+.narrows_panel li a.topic-name:hover {
     text-decoration: underline;
 }
 
