--- a/static/templates/user_info_popover_content.handlebars
+++ b/static/templates/user_info_popover_content.handlebars
@@ -73,7 +73,7 @@
             {{#if is_me}}
                 <i class="fa fa-user" aria-hidden="true"></i> {{#tr this}}View your profile{{/tr}}
             {{else}}
-                <i class="fa fa-user" aria-hidden="true"></i> {{#tr this}}View user profile{{/tr}}
+                <i class="fa fa-user" aria-hidden="true"></i> {{#tr this}}View full profile{{/tr}}
             {{/if}}
         </a>
     </li>
