css: Avoid unused background for group PMs.
The background color for group PMs is driven
by specific styles in the HTML, so the CSS
definition here was inaccurate.

--- a/static/styles/user_circles.scss
+++ b/static/styles/user_circles.scss
@@ -7,9 +7,12 @@
     top: 5px;
 }
 
+.user_active .user-status-indicator {
+    background-color: hsl(106, 74%, 44%);
+}
+
 .user_active .user-status-indicator,
 .group-pm-status-indicator {
-    background-color: hsl(106, 74%, 44%);
     border-color: hsl(106, 74%, 44%);
 }
 
