css: Use user_circle_fraction for group PM circles.
We rename this CSS class to something super concrete,
since all the associated CSS is very specifically
about drawing circles.

--- a/static/styles/right-sidebar.scss
+++ b/static/styles/right-sidebar.scss
@@ -60,7 +60,7 @@
 }
 
 .user-status-indicator,
-.group-pm-status-indicator {
+.user_circle_fraction {
     display: block;
     width: 8px;
     height: 8px;
