--- a/static/styles/user_circles.scss
+++ b/static/styles/user_circles.scss
@@ -1,5 +1,5 @@
 .user-status-indicator,
-.group-pm-status-indicator {
+.user_circle_fraction {
     border-radius: 50%;
     border: 1px solid;
     float: left;
@@ -12,7 +12,7 @@
 }
 
 .user_active .user-status-indicator,
-.group-pm-status-indicator {
+.user_circle_fraction {
     border-color: hsl(106, 74%, 44%);
 }
 
