--- a/static/templates/group_pms.handlebars
+++ b/static/templates/group_pms.handlebars
@@ -3,9 +3,9 @@
 <li data-user-ids="{{user_ids_string}}" class="group-pms-sidebar-entry narrow-filter">
     <div class="selectable_sidebar_block">
         {{#if fraction_present}}
-        <span class="group-pm-status-indicator" style="background:rgba(68,194,29,{{fraction_present}});"></span>
+        <span class="user_circle_fraction" style="background:rgba(68,194,29,{{fraction_present}});"></span>
         {{else}}
-        <span class="group-pm-status-indicator" style="background:none; border-color:rgb(127,127,127);"></span>
+        <span class="user_circle_fraction" style="background:none; border-color:rgb(127,127,127);"></span>
         {{/if}}
         <a href="{{href}}" data-name="{{name}}" title="{{name}}" class="group-pm-link">{{short_name}}</a>
         <span class="count"><span class="value"></span></span>
