refactor: Simplify logic for circles.
We now have a function get_user_circle_class
that returns one of these values:

    "user_circle_green"
    "user_circle_orange"
    "user_circle_empty"

And we put that in the templates.

And then CSS renders the circle of the appropriate
color.

The unit tests now explicitly capture whether
we are rendering the correct kind of circle.

--- a/static/styles/right-sidebar.scss
+++ b/static/styles/right-sidebar.scss
@@ -59,16 +59,16 @@
     display: inline-block;
 }
 
-.user-status-indicator,
-.user_circle_fraction {
-    display: block;
+.user_circle,
+#group-pms .user_circle_fraction {
     width: 8px;
     height: 8px;
     margin: 0px 5px;
 }
 
-.user_unknown .user-status-indicator {
-    display: none;
+#user_presences .user_circle,
+#group-pms .user_circle_fraction {
+    display: block;
 }
 
 #user_presences a,
