--- a/static/styles/zulip.scss
+++ b/static/styles/zulip.scss
@@ -1233,9 +1233,7 @@ a.message_label_clickable:hover {
     color: hsl(200, 100%, 40%);
 }
 
-.message_hovered .info,
-.has_actions_popover .info,
-.message_hovered .empty-star {
+.has_actions_popover .info {
     opacity: 1;
 }
 
