css: Position/size popover user circles in correct file.
We're soon gonna have user circles in four different places,
and the fourth place, Private Messages, will have different
size/position CSS.

Now each component does positioning and sizing in its
main CSS file:

    user info, group info -- popovers.scss
    buddy list, group PMs -- right-sidebar.scss

(We also use the more explicit syntax for padding each
side.)

--- a/static/styles/popovers.scss
+++ b/static/styles/popovers.scss
@@ -126,6 +126,16 @@ ul.remind_me_popover .remind_icon {
     text-align: center;
 }
 
+.popover_user_presence,
+.group-info-popover .member-list .user_circle {
+    width: 8px;
+    height: 8px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
 .user_popover .popover-title {
     padding: 0;
 }
