private messages: Add user circles to top left.
This is mostly adding markup, calling some convenient
functions in buddy_data.js, and adjusting CSS.

To make the circles update dynamically, I mostly
orchestrate this though activity.js for now.  It's
possible we'll want to adjust that eventually to
happen through something like a `presence_events`
dispatcher, but that's essentially what
a good part of `activity.js` does now.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -153,10 +153,7 @@ li.active-sub-filter {
 }
 
 .conversation-partners {
-    display: inline-block;
-    line-height: 1.2;
-    width: 90%;
-    overflow: hidden;
+    line-height: 1.25;
 }
 
 a.conversation-partners:hover {
@@ -386,11 +383,18 @@ li.topic-list-item {
 li.show-more-private-messages,
 li.expanded_private_message {
     position: relative;
-    padding: 1px 0px 1px 24px;
+    padding-top: 1px;
+    padding-right: 0px;
+    padding-bottom: 1px;
+    padding-left: 0px;
 }
 
 li.expanded_private_message a {
     margin: 1px 0px;
+}
+
+li.show-more-private-messages {
+    margin-left: 5px;
 }
 
 .show-all-streams a {
@@ -408,6 +412,17 @@ li.expanded_private_message a {
 .pm-box {
     margin-right: 20px;
     align-items: center;
+}
+
+.pm-box .user_circle {
+    min-width: 8px;
+    height: 8px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 5px;
+    margin-right: 9px;
+    position: relative;
+    top: 0px;
 }
 
 .zero-topic-unreads .pm-box,
