capitalization: Fix night logo lint errors.

--- a/static/templates/settings/organization-profile-admin.handlebars
+++ b/static/templates/settings/organization-profile-admin.handlebars
@@ -67,7 +67,7 @@
         </div>
 
         <h3>{{t "Organization logo for night mode" }}</h3>
-        <p>{{t "Like Organization Logo, but for the night theme." }}</p>
+        <p>{{t "Like Organization logo, but for the night theme." }}</p>
 
         <div class="realm-logo-section realm-night-logo-section">
             <div class="block realm-logo-block">
