--- a/static/styles/reactions.scss
+++ b/static/styles/reactions.scss
@@ -189,7 +189,7 @@
     display: block;
     height: 250px;
     width: 247px;
-    margin-left: 3px;
+    padding-left: 3px;
 }
 
 .emoji-search-results-container {
