streams_edit: Prevent newline characters in the description.
This commit achieves two things:
  1. Changes the UI of the "Create stream" form to make the
     textarea previously used to get the stream description
     a simple input field of type text (to suggest a single
     line description).

  2. Adds an extra check on the frontend side to make sure that
     when users create a new stream via. the "Create stream"
     option in the settings panel, they can't enter any newline
     characters (i.e. we disallow the enter key from being
     registered when typing out the stream description).
     We must also make sure that they cannot copy-and-paste over
     descriptions containing newline characters.

  resolves #11617

--- a/static/templates/stream_creation_form.handlebars
+++ b/static/templates/stream_creation_form.handlebars
@@ -16,8 +16,8 @@
                 <div class="stream-title">
                     {{t "Stream description (optional)"}}
                 </div>
-                <textarea name="stream_description" id="create_stream_description"
-                  placeholder="{{t 'Stream description' }}" value="" autocomplete="off" maxlength="{{ max_description_length }}"></textarea>
+                <input type="text" name="stream_description" id="create_stream_description"
+                  placeholder="{{t 'Stream description' }}" value="" autocomplete="off" maxlength="{{ max_description_length }}" />
             </section>
             <section class="block" id="make-invite-only">
                 <div class="stream-title">
