docs: Add docs for silent mentions syntax.

--- a/templates/zerver/app/markdown_help.html
+++ b/templates/zerver/app/markdown_help.html
@@ -69,6 +69,11 @@
                         <td><span class="user-mention">@Joe Smith</span> (notifies Joe Smith)</td>
                     </tr>
                     <tr>
+                        <td>@_**Joe Smith**<br/>
+                          (autocompletes from @_joe)</td>
+                        <td><span class="user-mention">Joe Smith</span> (links to profile but doesn't notify Joe Smith)</td>
+                    </tr>
+                    <tr>
                         <td>@**all**</td>
                         <td><span class="user-mention">@all</span> (notifies all recipients)</td>
                     </tr>
