realm_logo: Display with target background, not current background.
This makes it a lot more clear what this feature will look like.

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -1124,6 +1124,14 @@ input[type=checkbox].inline-block {
     max-width: 720px;
 }
 
+#realm-settings-night-logo {
+    background-color: hsl(212, 28%, 18%);
+}
+
+#realm-settings-logo {
+    background-color: hsla(0, 100%, 100%, 1);
+}
+
 .invite-user-link i {
     text-decoration: none;
     margin-right: 5px;
