--- a/static/templates/user-info-form-modal.handlebars
+++ b/static/templates/user-info-form-modal.handlebars
@@ -15,6 +15,10 @@
                     <label for="full_name">{{t "Full name" }}</label>
                     <input type="text" autocomplete="off" name="full_name" value="{{ full_name }}" />
                 </div>
+                <div class="input-group email_change_container">
+                    <label for="email">{{t "Email" }}</label>
+                    <input type="text" autocomplete="off" name="email" value="{{ email }}" readonly/>
+                </div>
                 {{#if is_bot}}
                 <div class="input-group edit_bot_owner_container">
                     <label for="bot_owner_select">{{t "Owner" }}</label>
