features: Rename Presence and Branding.

--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -176,7 +176,7 @@
             <p>Lightweight private conversations with one or as many people as you need.</p>
         </div>
         <div class="feature-block">
-            <h3>TEAM PRESENCE</h3>
+            <h3>TEAM AVAILABILITY</h3>
             <p>See who is currently online at a glance.</p>
         </div>
         <div class="feature-block">
@@ -264,7 +264,7 @@
             </p>
         </div>
         <div class="feature-block">
-            <h3>BRANDING</h3>
+            <h3>CUSTOM BRANDING</h3>
             <p>
                 Use your logo instead of Zulip's in the desktop and webapp.
             </p>
