features: Advertise integrations with IRC, Matrix, and Slack.

--- a/templates/zerver/features.html
+++ b/templates/zerver/features.html
@@ -270,6 +270,13 @@
             </p>
         </div>
         <div class="feature-block">
+            <h3>INTEGRATE WITH IRC, MATRIX, OR SLACK</h3>
+            <p>
+                Two way integrations with IRC and Matrix, and one way
+                integration with Slack.
+            </p>
+        </div>
+        <div class="feature-block">
             <h3>YOUR FEATURE HERE</h3>
             <p>Zulip is open source, so if something important for
             your use case is missing, you can make it happen!</p>
