left sidebar: Add an "unstar all messages" option.
In this commit, I've added a feature to unstar all the starred
messages.  This is useful, e.g., for folks who are using starred
messages to keep track of things they should come back when next at
their desktop.

The event flow is the standard one for a feature with a confirmation modal:

(1) User clicks on unstar all messages.

(2) We display a confirmation modal; if the user confirms, we send a
request to the backend to clear all starred messages.

(3) The events system sends that UI update back to us, removing the
stars from the UI.

Fixes #11401.

--- a/static/styles/left-sidebar.scss
+++ b/static/styles/left-sidebar.scss
@@ -260,6 +260,7 @@ a.conversation-partners:hover {
 .filter-icon i,
 .all-messages-arrow i,
 .stream-sidebar-arrow i,
+.starred-messages-sidebar-arrow i,
 .topic-sidebar-arrow i {
     padding-right: 0.25em;
     display: inline-block;
@@ -272,6 +273,7 @@ a.conversation-partners:hover {
 */
 .all-messages-arrow,
 .stream-sidebar-arrow,
+.starred-messages-sidebar-arrow,
 .topic-sidebar-arrow {
     position: absolute;
     display: none;
@@ -282,6 +284,7 @@ a.conversation-partners:hover {
     pretty similar.
 */
 .all-messages-arrow,
+.starred-messages-sidebar-arrow,
 .stream-sidebar-arrow {
     top: 2px;
     right: 10px;
@@ -304,6 +307,7 @@ a.conversation-partners:hover {
     the relevant chevrons in light gray.
 */
 li.top_left_all_messages:hover .all-messages-arrow,
+li.top_left_starred_messages:hover .starred-messages-sidebar-arrow,
 #stream_filters li:hover .stream-sidebar-arrow,
 li.topic-list-item:hover .topic-sidebar-arrow {
     display: inline;
@@ -315,6 +319,7 @@ li.topic-list-item:hover .topic-sidebar-arrow {
     If you hover directly over the chevron itself,
     show it in black.
 */
+.starred-messages-sidebar-arrow:hover,
 .all-messages-arrow:hover,
 .stream-sidebar-arrow:hover,
 .topic-sidebar-arrow:hover {
