--- a/templates/zerver/app/index.html
+++ b/templates/zerver/app/index.html
@@ -168,5 +168,6 @@
     <div id="user-profile-modal-holder"></div>
     <div class='notifications top-right'></div>
     <div id="delete-topic-modal-holder"></div>
+    <div class="left-sidebar-modal-holder"></div>
 </div>
 {% endblock %}
