--- a/templates/zerver/app/left_sidebar.html
+++ b/templates/zerver/app/left_sidebar.html
@@ -46,6 +46,7 @@
                         <span class="value"></span>
                     </span>
                 </a>
+                <span class="arrow starred-messages-sidebar-arrow"><i class="fa fa-chevron-down" aria-hidden="true"></i></span>
             </li>
         </ul>
         <div id="streams_list" class="zoom-out">
