integrations: Rename Google logo to bypass Adblock Plus.
Adblock Plus's "Block social media icons tracking" setting blocks
images with for social media platforms in their names from loading, so
we rename the Google logo to bypass this.

--- a/static/styles/portico-signin.scss
+++ b/static/styles/portico-signin.scss
@@ -622,7 +622,7 @@ button.login-social-button:active {
 }
 
 button.login-google-button {
-    background-image: url(/static/images/landing-page/logos/google-icon.png);
+    background-image: url('/static/images/landing-page/logos/googl_e-icon.png');
 }
 
 .github-wrapper::before {
