refactor: Extract me_message template.
This is for:

    /me goes to lunch

Which renders to something like:

    <b>Steve Howell</b> goes to lunch [EDITED]

--- a/static/templates/single_message.handlebars
+++ b/static/templates/single_message.handlebars
@@ -21,20 +21,7 @@
 
                         {{#if include_sender}}
                             {{#if status_message}}
-                            <span class="sender-status">
-                                <span class="sender_name-in-status sender_info_hover auto-select" role="button" tabindex="0">{{msg/sender_full_name}}</span>
-                                {{#if sender_is_bot}}
-                                <i class="zulip-icon bot" aria-label="{{t 'Bot' }}"></i>
-                                {{/if}}
-
-                                <span class="status-message auto-select">
-                                    {{{ status_message }}}
-                                </span>
-
-                                {{#if_and last_edit_timestr include_sender}}
-                                {{partial "edited_notice"}}
-                                {{/if_and}}
-                            </span>
+                            {{partial "me_message"}}
                             {{/if}}
                         {{/if}}
 
