--- a/static/templates/message_content.handlebars
+++ b/static/templates/message_content.handlebars
@@ -2,9 +2,7 @@
     <span class="message_sender{{^status_message}} sender_info_hover{{/status_message}} no-select">
 
         {{#if include_sender}}
-        <div class="u-{{msg/sender_id}} inline_profile_picture{{#status_message}} sender_info_hover{{/status_message}}{{#sender_is_guest}} guest-avatar{{/sender_is_guest}}" aria-hidden="true">
-            <img src="{{small_avatar_url}}" alt="" class="no-drag"/>
-        </div>
+        {{partial "message_avatar"}}
         {{/if}}
 
         {{#if status_message}}
