Remove redundant sender_info_hover class.
This class exist on the parent element, and the popover
code that relies on it can use the parent div.

--- a/static/templates/me_message.handlebars
+++ b/static/templates/me_message.handlebars
@@ -1,5 +1,5 @@
 <span class="sender-status">
-    <span class="sender_name-in-status sender_info_hover auto-select" role="button" tabindex="0">{{msg/sender_full_name}}</span>
+    <span class="sender_name-in-status auto-select" role="button" tabindex="0">{{msg/sender_full_name}}</span>
     {{#if sender_is_bot}}
     <i class="zulip-icon bot" aria-label="{{t 'Bot' }}"></i>
     {{/if}}
