refactor: Add template vars for "edited" position.

--- a/static/templates/message_content.handlebars
+++ b/static/templates/message_content.handlebars
@@ -26,11 +26,9 @@
         {{timestr}}
     </span>
 
-    {{#if_and last_edit_timestr include_sender}}
-        {{#unless status_message}}
-        {{partial "edited_notice"}}
-        {{/unless}}
-    {{/if_and}}
+    {{#if show_edited_on_top_line}}
+    {{partial "edited_notice"}}
+    {{/if}}
 
     {{partial "message_controls"}}
 
@@ -38,10 +36,8 @@
 
 <div class="message_content">{{#unless status_message}}{{#if use_match_properties}}{{{msg/match_content}}}{{else}}{{{msg/content}}}{{/if}}{{/unless}}</div>
 
-{{#if last_edit_timestr}}
-    {{#unless include_sender}}
-    {{partial "edited_notice"}}
-    {{/unless}}
+{{#if show_edited_at_end}}
+{{partial "edited_notice"}}
 {{/if}}
 
 <div class="message_edit">
