refactor: Remove include_sender check.
Inside of the `me_message` template, it's implicit
that `include_sender` is `true`.

--- a/static/templates/me_message.handlebars
+++ b/static/templates/me_message.handlebars
@@ -8,7 +8,7 @@
         {{{ status_message }}}
     </span>
 
-    {{#if_and last_edit_timestr include_sender}}
+    {{#if last_edit_timestr}}
     {{partial "edited_notice"}}
-    {{/if_and}}
+    {{/if}}
 </span>
